crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__block__scope.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/block/scope.lox
---
success: true
exit_code: 0
----- stdout -----
inner
outer

----- stderr -----
